--- a/SupermanChatCleaner/.classpath
+++ b/SupermanChatCleaner/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="lib" path="E:/Alin2015/spigot-1.8.8.jar"/>
 	<classpathentry kind="lib" path="E:/Alin2015/spigot-1.7.10-R0.1-SNAPSHOTBuild1646.jar"/>
 	<classpathentry kind="lib" path="E:/Alin2015/spigot-1.9.4.jar"/>
+	<classpathentry kind="lib" path="E:/Alin2015/BarAPI.jar"/>
+	<classpathentry kind="lib" path="E:/Alin2015/spigot-1.10.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
